# libfragmentzip

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  libfragmentzip.pc.in
.github/workflows/: main.yml
include/: Makefile.am
include/libfragmentzip/: libfragmentzip.h
libfragmentzip/: Makefile.am  all.h  all_libfragmentzip.h  libfragmentzip.c  libfragmentzip.h  main.c
libfragmentzip.xcodeproj/: project.pbxproj
libfragmentzip.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libfragmentzip.xcodeproj/project.xcworkspace/xcuserdata/tihmstar.xcuserdatad/: UserInterfaceState.xcuserstate
libfragmentzip.xcodeproj/xcuserdata/tihmstar.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
libfragmentzip.xcodeproj/xcuserdata/tihmstar.xcuserdatad/xcschemes/: libfragmentzip.xcscheme  xcschememanagement.plist
